# AzPhotoSync

./: .gitignore  README.md  pyproject.toml
ios/AzPhotoSyncMobile/: AzPhotoSyncApp.swift  ContentView.swift  KeychainTokenStore.swift  Models.swift  PhotoLibraryService.swift  README.md  SecureUploadClient.swift  UploadViewModel.swift
src/azphotosync/: __init__.py  cli.py  config.py  mobile_auth.py  scanner.py  state.py  storage.py  syncer.py
tests/: test_config.py  test_mobile_auth.py  test_scanner.py  test_state.py
